fixed fullscreen button z-index

--- a/src/styles/blocks/main/video/video.scss
+++ b/src/styles/blocks/main/video/video.scss
@@ -140,8 +140,8 @@
   @media screen and (max-width: 576px) {
     font-size: 14px;
   }
-  z-index: 3;
-  transition: ease-in .4s;
+  z-index: 6;
+  transition: ease-in .3s;
 }
 
 .camera-button_hidden{
